# ViGaCo

./: Cargo.toml  README.md
ViGaCo-Proto/: Cargo.toml
ViGaCo-Server/: Cargo.toml
protos/: controller_event.proto
src/: main.rs
