[package]
name = "vigaco_server"
version = "0.1.0"
authors = ["Philip Borgström <philip.borgstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
futures = "0.3.8"
log = "0.4.11"
pretty_env_logger = "0.4.0"
env_logger = "0.8.2"
uinput = "0.1.3"
vigaco_proto = { path = "../ViGaCo-Proto"}